# hf-serve

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  install.sh  project.md  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  gateway-deployment.yaml  gateway-service.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
src/hf_serve/: __init__.py  cli.py  config.py  gc.py  http.py  metrics.py  models.py  pull.py  server.py  state.py  storage.py  sync.py  util.py
tests/: conftest.py  test_config.py  test_manifest.py  test_pull.py  test_server.py  test_state.py  test_storage.py
