[project]
name = "hf-serve"
version = "0.1.0"
description = "Lightweight self-hosted Hugging Face model directory and sync service for homelab clusters."
readme = "README.md"
authors = [
    { name = "yondercode", email = "yondercode@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.25",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
hf-serve = "hf_serve.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
